Setting up HTML and CSS framework

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
+    <title>Tic Tac Toe Game</title>
 </head>
 <body>
+    <div class="header-container">
+        <h1>Tic Tac Toe</h1>
+    </div>
+    <div class="option-container">
+        <button name="newgame-btn" class="newgame-btn" id="newgame-btn">New Game</button>
+
+    </div>
+    <div class="player-container">
+        <form id="player-form">
+            <div id="playerOne-container">
+                <label for="player-one">Player 1: </label>
+                <input type="text" id="player-one" name="player-one" placeholder="Player 1">
+            </div>
+            <div id="playerTwo-container">
+                <label for="player-two">Player 2: </label>
+                <input type="text" id="player-two" name="player-two" placeholder="Player 2">
+            </div>
+        </form>
+    </div>
+
     
 </body>
 </html>
