--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <title>Tic Tac Toe Game</title>
@@ -20,11 +23,11 @@
         <div class="player-container">
             <form id="player-form">
                 <div id="playerOne-container">
-                    <label for="player-one">Player 1: </label>
+                    <label for="player-one">Player 1 (X): </label>
                     <input type="text" id="player-one" name="player-one" placeholder="Player 1">
                 </div>
                 <div id="playerTwo-container">
-                    <label for="player-two">Player 2: </label>
+                    <label for="player-two">Player 2 (O): </label>
                     <input type="text" id="player-two" name="player-two" placeholder="Player 2">
                 </div>
             </form>
